# MAE

./: .gitignore  CMakeLists.txt  Makefile  Makefile.no_interface  Makefile.win  caco  config.cache  config.status  configure  configure.in  configure.scan
cmake/modules/: FindXForms.cmake  FindXml2.cmake
docs/: Makefile  doc-config  interpreter.tex  matlab-config  netcomp.tex  yacc.ps
etc/: gaussian_funcs_test.c  gaussian_funcs_test.gnuplot  teste_gauss.c  teste_gauss2.c  teste_gauss3.c  teste_gauss4.c
examples/: CMakeLists.txt  mkbash.sh
examples/biological_vergence/: .wp  Makefile  biological_vergence.cml  biological_vergence.con  image_right
examples/brain/: .wp  Makefile  brain.cml  brain.con  character.in  robbie.txt
examples/calibration/: Makefile  Makefile.win  calibration.con  capture.c  capture.sh  capture_left_image.bat  capture_right_image.bat  img_left.pnm  img_right.pnm  make_target.c
examples/character/: .wp  .wp_character  character.cml  character.con  character_save_knowledge.cml  generate_reduced_dataset.m  result-1.txt  result-60000-10000--128-gaussian-dist-r-5--128-random-dist.txt  teste.cml
examples/character2/: .wp_character  Makefile  Makefile.no_interface  character.cml  character.con  character.con.source  character.in  generate_reduced_dataset.m  load.cml
examples/character2.1/: Makefile  Makefile.no_interface  character.cml  character.con  character.con.source  character_kmeans_001.cml  character_kmeans_010.cml  character_kmeans_025.cml  character_kmeans_050.cml  character_kmedoids_001.cml  character_kmedoids_010.cml  character_kmedoids_025.cml  character_kmedoids_050.cml  character_original_100.cml  character_result.csv  resultados_char.csv  scriptGeraResultados.sh  scriptRodaTodos.sh
examples/character_conf/: .wp_character  Makefile  character.cml  character.con  character.in  character_save_knowledge.cml  gera.c  result-50000-10000-gaussian-dist-r-5-10x10.txt  result-50000-10000-gaussian-dist-r-5-2.txt  teste.cml
examples/character_label/: CMakeLists.txt  Makefile  character.cml  character.con  character.in  character_save_knowledge.cml  result-50000-10000-gaussian-dist-r-5.txt  teste.cml
examples/character_label/character_user_functions/: character_user_functions.c
examples/character_multilayer/: .wp_character  0.ppm  1.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm  Makefile  character.cml  character.con  character2.cml  scriptMake.sh
examples/character_rbm/: Makefile  character.cml  character.con  generate_reduced_dataset.m
examples/character_rbm2/: .wp_character  readme.txt
examples/character_rbm3/: Makefile  character.cml  character.con  character.con.source  make_run_all.sh
examples/character_rbm4/: .wp_character  Makefile.no_interface  character.cml  character.con  character.in  character_test_order_full.csv  character_train_order_full.csv
examples/character_rbm_cuda/: .wp_character  Makefile  Makefile.no_interface  character.cml  character.con  character_test_order_small.csv  result_dirs.sh
examples/character_with_deep_learning/: .wp_character  Makefile  character.cml  character.con  character.in  result-5000-1000-s256-random.txt  teste.cml
examples/circle/: .wp  circle.cml  image  (+2 more)
examples/vergence_3.0/: .wp_vergence  CMakeLists.txt  Makefile  cones.cml  load_lcad.cml  teddy.cml  tsukuba.cml  tsukuba_imR.ppm  venus.cml  vergence.con
examples/vergence_3.0/vergence_user_functions/: vergence_filters.c  vergence_filters.h  vergence_user_functions.c  vergence_user_functions.h
images/: lena.pnm  noise_left.pnm  noise_right.pnm  pencils.pnm
include/: filter.h  forms.h  gpu_syn_neu.h  mae.h  mae_control.h  user_defs.h
src/: CMakeLists.txt  Makefile  Makefile.in  Makefile.no_interface  Makefile.win  Makefile_omp_popcnt  compara  connect.c  filter.c  global.c  interpreter_lex.l  interpreter_yacc.y  io.c  io_display.c  learning.c  mae_control.c  mae_control.fd  mae_control.h  mae_control_actions_cb.c  mae_control_cb.c  mae_control_file_cb.c  mae_control_main.c  mae_control_main_true.c  netcomp_lex.l  netcomp_yacc.y  syn_neu.c  syn_neu.h  syn_neu_correlate.c  syn_neu_default.c  syn_neu_io.c  syn_neu_label.c  syn_neu_logiredu.c  syn_neu_mem_overwrite.c  syn_neu_minchinton.c  syn_neu_minchinton_center_surround.c  syn_neu_minchinton_fat_fast.c  syn_neu_rnd_mem_type.c  syn_neu_wisard.c  user_functions.c
src/api/: mae_api.c  mae_api.h  mae_cv.c  mae_cv.h
src/libbee/: Makefile  libbe_old  libbee.cpp  libbee_old.bak
src/libbee/include/: libbee.hpp
src/libbee/lib/: readme.txt
src/libbee/pgr-stereo-examples-libdc-2.0.2/pgrlibdcstereo/: Makefile  pgr_conversions.cpp  pgr_stereocam.cpp  pgr_stereocam.h
src/libbee/pgr-stereo-examples-libdc-2.0.2/simplegrab/: Makefile  simplegrab
src/libbee/pgr-stereo-examples-libdc-2.0.2/simplestereo/: disparity.pgm  left.ppm  rectified.pgm  right.ppm
src/libga100/: CMakeLists.txt  Makefile.win  config.c  cross.c  ga-test-int.c  ga-test-int.cfg  ga.c  ga.h  makefile  mutate.c  pool.c
src/libstereo/: CMakeLists.txt  Makefile  Makefile.win
src/libstereo/doc/: Makefile  Makefile.win  doc-config
src/libstereo/include/: camera.hpp  common.hpp  matrix.hpp  stereo_api.hpp  stereo_system.hpp
src/libstereo/src/: Makefile  Makefile.win  camera.cpp  stereo_api.cpp  stereo_system.cpp
src/libstereo3/: CMakeLists.txt  Makefile
src/libstereo3/docs/: Doxyfile
src/libstereo3/include/: common.hpp  matrix.hpp  mono.h  parser.h  stereo.h  stereo_api.h
src/libstereo3/src/: Makefile  mono.cpp  parser.cpp  stereo.cpp  stereo_api.cpp
src/libtsai/: CMakeLists.txt  Makefile  Makefile.win  cal.rsp  cal_eval.c  cal_main.c  cal_main.h  cal_tran.c  cal_util.c  ccal.c  ccal.run  ccal_fo.c  changes.txt  csyn.c  ecal.c  ecal.run  ecalmain.c  gasdev.c  ic2wc.c  index.txt  makefile.bor  makefile.unx  minpack.rsp  nccal.c  nccal.run  nccal_fo.c  ncsyn.c  notes.txt  wc2ic.c  xfd2xfu.c
src/libtsai/matrix/: matrix.c  matrix.h
src/libtsai/minpack/: dpmpar.c  enorm.c  f2c.h  fdjac2.c  lmdif.c  lmpar.c  qrfac.c  qrsolv.c
tools/: .nedit  MAE.rules  gera_image  gera_image.c.ols
(+18495 files in other folders)
