dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LEX
AC_PROG_RANLIB
AC_PROG_YACC

dnl Checks for libraries.
dnl Replace `main' with a function in -lfl:
AC_CHECK_LIB(fl, main)

dnl Checks for header files.
AC_PATH_X
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h malloc.h strings.h sys/time.h unistd.h)
#AC_CHECK_PROG(AR, ar, /usr/bin/ar)
#AC_CHECK_PROG(YACC_TESTE, yacc, /usr/bin/yacc,"")
#AC_CHECK_PROG(LEX_TESTE, lex, /usr/bin/lex,"")


#if test "$YACC_TESTE" = ""
#then
#	AC_MSG_ERROR('YACC not found')
#fi
#if test "$LEX_TESTE" = ""
#then
#	AC_MSG_ERROR('LEX not found')
#fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_SUBST(CFLAGSNET)
AC_SUBST(LIBCONF)
AC_SUBST(LIBS)

AC_CONFIG_AUX_DIR()
AC_CANONICAL_SYSTEM

case "$target" in
i586*) CFLAGS="-g" CFLAGSNET=" $CFLAGS " LIBCONF=" -L/usr/local/lib -L/usr/X11R6/lib " LIBS=" -lnet_conn -lGA -lTsai -lXmu -lXext -lX11 -ltiff -lglut -lGLU -lGL -lXi -lforms -lm -lfl " ;;
i686*) CFLAGS="-g" CFLAGSNET=" $CFLAGS " LIBCONF=" -L/usr/local/lib -L/usr/X11R6/lib " LIBS=" -lnet_conn -lGA -lTsai -lXmu -lXext -lX11 -ltiff -lglut -lGLU -lGL -lXi -lforms -lm -lfl " ;;
sun*) CFLAGS="-g" CFLAGSNET=" $CFLAGS -DTHREADS -DSOLARIS_THREADS -DPTHREADS " LIBCONF=" -L/usr/local/lib -L/usr/openwin/lib " LIBS=" -lSM -lICE -lpthread -lnet_conn -lGA -lTsai -lXmu -lXext -lX11 -ltiff -lglut -lGLU -lGL -lXi -lforms -lm -ll ";; 
sparc*) CFLAGS="-g" CFLAGSNET=" $CFLAGS -DTHREADS -DSOLARIS_THREADS -DPTHREADS " LIBCONF=" -L/usr/local/lib -L/usr/openwin/lib " LIBS=" -lSM -lICE -lpthread -lnet_conn -lGA -lTsai -lXmu -lXext -lX11 -ltiff -lglut -lGLU -lGL -lXi -lforms -lm -ll ";; 
esac

echo "$CFLAGSNET"
echo "$LIBCONF"
echo "$LIBS"
echo "$CFLAGS"

AC_OUTPUT(src/Makefile bin/netcompiler)

cd bin
chmod 775 netcompiler
cd .. 
